--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -10,10 +10,22 @@ html, body{
     height: 100vh;
     width: 100vw;
     background-color: black;
+    background-image: url(../imagens/fundo-madeira.jpg);
 }
 
 main{
     height: 100vh;
     position: relative;
-    background-color: green;
+}
+
+section#telefone{
+    
+    height: 627px;
+    width: 311px;
+    background-image: url(../imagens/frame-iphone.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
