--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -10,7 +10,9 @@ html, body{
     height: 100vh;
     width: 100vw;
     background-color: black;
-    background-image: url(../imagens/fundo-madeira.jpg);
+    background: url(../imagens/fundo-madeira.jpg) no-repeat top center;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 main{
