--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -32,6 +32,19 @@ section#telefone{
     transform: translate(-50%, -50%);
 }
 
+section#redes-sociais > a > img{
+    width: 70px;
+   margin: 10px;
+   border-radius: 50%;
+   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.594);
+}
+
+section#redes-sociais{
+    text-align: right;
+}
+
+
+
 iframe#tela{
     position: relative;
     top: 80px;
