--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -37,10 +37,18 @@ section#redes-sociais > a > img{
    margin: 10px;
    border-radius: 50%;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.594);
+   box-sizing: border-box;
 }
 
 section#redes-sociais{
     text-align: right;
+}
+
+section#redes-sociais img:hover{
+    border: 2px solid rgba(255, 255, 255, 0.502);
+    transform: translate(-3px, -3px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.393);
+    transition: transform 0.3s, border 0.6s;
 }
 
 
