--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -42,6 +42,7 @@ section#redes-sociais > a > img{
 
 section#redes-sociais{
     text-align: right;
+    margin-left: 20px;
 }
 
 section#redes-sociais img:hover{
@@ -49,6 +50,7 @@ section#redes-sociais img:hover{
     transform: translate(-3px, -3px);
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.393);
     transition: transform 0.3s, border 0.6s;
+
 }
 
 
